# react-boilerplate

./: .gitignore  README.md  pyproject.toml
api/: app.py
example/: __init__.py  __main__.py  app.py  cli.py
example/static/: index.html
example/static/assets/: index-CHUgxZDr.js  index-rxU8AIpj.css
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  api.ts
ui/src/api/: index.ts
ui/src/types/: api.d.ts
