[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example"
version = "0.1.0"
description = "A web-based Python code execution environment"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pandas>=2.0.0",
    "scalar_fastapi",
    "pydantic>=2.0.0"
]

[project.scripts]
example = "example.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["example"] 